Use `getLast` now that EP is on 21 (or will be after unknown commit)
PiperOrigin-RevId: 826447287
Change-Id: Idd47d89e1b8b840141ca344f47d58967f6a772e3